--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: false
 android:
   components:
     - sys-img-armeabi-v7a-android-21
-    - build-tools-19.1.0
+    - build-tools-21.1.1
 
 jdk: oraclejdk7
 
@@ -35,5 +35,5 @@ script:
   - adb devices
  # - ./gradlew connectedCheck --info
   - ./gradlew build
-  - calabash-android resign app/build/outputs/apk/app-release-unsigned.apk
-  - calabash-android run app/build/outputs/apk/app-release-unsigned.apk
+  #- calabash-android resign app/build/outputs/apk/app-release-unsigned.apk
+  #- calabash-android run app/build/outputs/apk/app-release-unsigned.apk
